# upt

./: .clang-format  .gitignore  .gitmodules  10-11-2023.py  17-11-2023.py  README.md  compile_flags.txt  stepik.py
06-10-2023/: extra.py  homework.py
13-10-2023/: homework.py
20-10-2023/: homework.py
29-08-2023/: homework.ml
29-09-2023/: homework.py
algebra/vectors/: dune-project
algebra/vectors/lib/: Ints.ml  Rat.ml  Rat.mli  Vec.ml  dune
algebra/vectors/test/: dune  vectors.ml
c/: die.h  enums.h  try_read.h
c/array/: array.c  array.h
c/hash_table/: bucket.c  bucket.h  build  common.h  hash_functions.c  hash_functions.h  hash_table.c  hash_table.h  hashers.c  hashers.h  values.c  values.h
c/pc/: read.h
c/ticker/: ticker.c  ticker.h
lsd/: 03-11-2023.py  24-11-2023.py  27-10-2023.py  29-11-2023.py  stepik.py  test.c  test.py  test.s
lsd/06-10-2023/: homework.ml
lsd/29-09-2023/: homework.ml
mac/: bisect_zero.m  conj_gradients.m  false_pos_zero.m  fpi_zero.m  gauss_eliminate.m  gauss_seidel.m  jacobi.m  newton_zero.m  polyfit_newton_div_diff.m  secant_zero.m
marius/: lab-6.cxx  rectangle.cxx
pc/: .gitignore  bets.c  ex-6-gen-input  ex-6-ht.c  ex-6.c  input_with_timer.c  palindrome_bits.c  pc-p1-cod-1.c  pc-p1-cod-2.c  remove_nums_with_k_bits.c  replace_bit_interval.c  sort_pairs.c  timer.c
pc/c-programming/: detab.c  entab.c  tab-common.c  (+1 more)
teme-pc/: ex-6-ht.c  ex-6.c
thinkocaml/: chapter-5.ml  chapter-6.ml  chapter-8.ml  chapter10.ml  chapter3.ml  chapter4.ml  chapter7.ml  chapter8.ml  chapter9.ml  dune
tpa/: bitset.c  polish.c
(+56 files in other folders)
